Creado mediante Colaboratory

--- a/Reto_2_Convertidor_de_Unidades.ipynb
+++ b/Reto_2_Convertidor_de_Unidades.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYmTd/ofztQttt8eYzdc5m",
+      "authorship_tag": "ABX9TyOf6f3sJDII4L3MhYDtcwrt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,7 +131,7 @@
         "        opcion = input(\"Seleccione una opción (1/2/3/4): \")\n",
         "\n",
         "        if opcion == \"4\":\n",
-        "            print(\"¡Hasta luego!\")\n",
+        "            print(\"menu cerrado!\")\n",
         "            break\n",
         "\n",
         "        if opcion == \"1\":\n",
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UNw-25-q-TMA",
-        "outputId": "4b6d0055-bdb5-426a-e9fb-1ca843f19a28"
+        "outputId": "d1415802-c9be-47e1-afd7-13f957487e00"
       },
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
             "3. Convertir unidades de tiempo\n",
             "4. Salir del programa\n",
             "Seleccione una opción (1/2/3/4): 4\n",
-            "¡Hasta luego!\n"
+            "menu cerrado!\n"
           ]
         }
       ]
